[package]
name = "rust_md5"
version = "0.1.0"
authors = ["Charlotte Woodrow <charlotte.woodrow@q3w3e3.dev>", "Galen Guyer <galen@galenguyer.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md-5 = "0.9.1"
hex-literal = "0.3.1"
rand = "0.8.3"
threadpool = "1.8.1"
num_cpus = "1.13.0"
hex = "0.4.3"